--- a/python/templates/checkout.html
+++ b/python/templates/checkout.html
@@ -5,7 +5,7 @@
     <title>Checkout</title>
 </head>
 <body>
-    <h1>결제가 완료되었습니다.</h1>
+    <h1>주문이 완료되었습니다.</h1>
     <h1>우리은행 1002-442-690619로 돈을 보내주세요.</h1>
     <p>총 결제 금액: {{ total }} KRW</p>
     <a href="{{ url_for('index') }}">돌아가기</a>
