--- a/templates/orders.html
+++ b/templates/orders.html
@@ -38,16 +38,16 @@
     {% if orders %}
         {% for order in orders %}
             <h2>
-                주문 {{ loop.index }} (테이블 번호: {{ order['table_number'] }})
-                <div class="checkbox-group">
-                    <label>
-                        <input type="checkbox" class="payment-checkbox" data-order-number="{{ order['order_number'] }}"> 입금 확인
-                    </label>
-                    <label>
-                        <input type="checkbox" class="serving-checkbox" data-order-number="{{ order['order_number'] }}"> 서빙 완료
-                    </label>
-                </div>
+                주문 {{ loop.index }} (주문 번호: {{ order['order_number'] }})
             </h2>
+            <div class="checkbox-group">
+                <label>
+                    <input type="checkbox" class="payment-checkbox" data-order-number="{{ order['order_number'] }}"> 입금 확인
+                </label>
+                <label>
+                    <input type="checkbox" class="serving-checkbox" data-order-number="{{ order['order_number'] }}"> 서빙 완료
+                </label>
+            </div>
             <table class="order-table">
                 <thead>
                     <tr>
